package google.protobuf;
option optimize_for = SPEED;

message LoginRequest {
  required string CustomerID = 1;
  required string Password = 2;
}
message LoginResponse {
  required int32 Result = 1;
}
message GoodsRequest {
  required string time = 1;
}
message GoodsResponse {
  message WJ_Goods {
    required string GoodsID = 1;
    required string GoodsName = 2;
	required string time = 3;
  }
  repeated WJ_Goods result = 1;
}
message RecordRequest {
   message WJ_Photo_Submit{
    required string CustomerID=1;
    required string WJID=2;
    required string PhotoID=3;
    required string PhotoPath=4;
    required string AtTime=5;
	required string SeqID=6;
   }
   message WJ_Record_Submit{
    required string SeqID=1;
    required string CustomerID=2;
    required string WJID=3;
    required string ID=4;
    required string WorkSpace=5;
    required string GoodsName=6;
    required string BeginTime=7;
    required string EndTime=8;
    required string BgeinPhotoID=9;
    required string EndPhotoID=10;
    required string longitude=11;
    required string Latitude=12;
    required string Mode=13;
   }
  repeated WJ_Photo_Submit photos = 1;
  repeated WJ_Record_Submit records = 2;
  required string id = 3;
}
message RecordResponse {
  required int32 Result = 1;
  required string id = 2;
}
message RecordResponse2 {
  required int32 Result = 1;
  repeated string photos = 2;
  repeated string records = 3;
}